--- a/CustomerManagement.API/CustomerManagement.API.csproj
+++ b/CustomerManagement.API/CustomerManagement.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -18,7 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CustomerManagement.Shared\CustomerManagement.Shared.csproj" />
+    <ProjectReference Include="..\CustomerManagement.Repositories\CustomerManagement.Persistence.csproj" />
+    <ProjectReference Include="..\CustomerManagement.Services\CustomerManagement.Services.csproj" />
   </ItemGroup>
 
 </Project>
